<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_savor"
    tools:context=".view.onboarding.Onboarding2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding3"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_marginTop="65dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding4"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_marginTop="130dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding5"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:layout_marginTop="190dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding6"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="250dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding7"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="370dp"/>
    </RelativeLayout>

</FrameLayout>